creata struttura e placeholder di riferimento base

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,21 @@
-body{background-color: red;}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+main{
+    width: 90%;
+    margin: 0 auto;
+    border: 1px solid black;
+}
+.row {
+    font-size: 0;
+    padding: 1%;
+}
+.box {
+    width: calc((100% / 3) - 4px);
+    display: inline-block;
+    height: 600px;
+    margin: 2px;
+    background-color: violet;
+}
