--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,125 @@ main{
 }
 .row {
     font-size: 0;
-    padding: 1%;
+    padding: 3%;
 }
+/* CARDS */
+.cards {
+    width: calc((100% / 3) - 10px);
+    display: inline-block;
+    height: 500px;
+    margin: 5px;
+    background-color: lavender;
+    /* position: relative; */
+    border: 1px solid black;
+}
+figure{
+    width: 100%;
+    height: 100%;
+}
+.placeholder{
+    width: 100%;
+    height: 100%;
+    background-color: darkgrey;
+    border: 1px solid red;
+    display: inline-block;
+
+}
+figcaption{
+    margin-top: 5px;
+}
+.small-text{
+    font-size: 12px;
+    text-transform: capitalize;
+}
+.big-text{
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.discount{
+    font-size: 12px;
+    font-weight: bold;
+    color: red;
+    margin-right: 2px;
+}
+.price{
+    font-size: 12px;
+    text-decoration:line-through;
+}
+/**************/
 .box {
     width: calc((100% / 3) - 4px);
     display: inline-block;
-    height: 600px;
+    height: 500px;
     margin: 2px;
     background-color: violet;
+    position: relative;
+}
+.box-overlay {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-color: green;
+    font-size: 12px;
+    display: none;
+}
+/* Su azione hover, quando passo su box, overlay cambia stato display diventando cosí visibile*/
+.box:hover .box-overlay{
+    display: block;
+}
+
+/* Like */
+.like {
+   width: 40px;
+   height: 40px;
+   background-color: lightgrey;
+   position: absolute;
+   top: 20px;
+   right: 0px;
+   font-size: 12px;
+   text-align: center;
+   line-height: 50px;
+   font-weight: bold;
+   color: black;
+
+}
+
+.box:hover .box-overlay{
+    display: block;
+}
+
+.unlike-overlay::after{
+    content: "&#9829;";
+    background-color: green;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    right: -25px;
+    top: -25px;
+    font-size: 10px;
+    text-align: center;
+    line-height: 50px;
+    font-weight: bold;
+    color: white;
+}
+/* END like*/
+/* dopo il passaggio del mouse sul box, aggiungendo un contenuto nell'html - "Hello!"*/
+
+.box-overlay::after{
+    content: "Hello!";
+    background-color: pink;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    right: -25px;
+    top: -25px;
+    font-size: 10px;
+    text-align: center;
+    line-height: 50px;
+    font-weight: bold;
+    color: white;
 }
