--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,20 @@ figure{
     background-color: darkgrey;
     border: 1px solid red;
     display: inline-block;
-
 }
+
+.overlay{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-color: lavender;
+    display: none;
+}
+.placeholder:hover .overlay{
+    display: block;
+}
+
 .like {
     width: 40px;
     height: 40px;
@@ -95,22 +107,7 @@ figcaption{
     display: block;
 }
 
-.unlike-overlay::after{
-    content: "&#9829;";
-    background-color: green;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    position: absolute;
-    right: -25px;
-    top: -25px;
-    font-size: 10px;
-    text-align: center;
-    line-height: 50px;
-    font-weight: bold;
-    color: white;
-}
-/* END like*/
+
 /* dopo il passaggio del mouse sul box, aggiungendo un contenuto nell'html - "Hello!"*/
 
 .box-overlay::after{
