--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,54 @@ figure{
     border: 1px solid red;
     display: inline-block;
 }
+/* Etichette */
+.discount30::after{
+    content: "-30%";
+    background-color: red;
+    width: 50px;
+    height: 30px;
+    position: absolute;
+    left: 0px;
+    bottom: 25px;
+    font-size: 14px;
+    text-align: center;
+    line-height: 30px;
+    font-weight: bold;
+    color: white;
+}
+.discount50::before{
+    content: "-50%";
+    background-color: red;
+    width: 50px;
+    height: 30px;
+    position: absolute;
+    left: 0px;
+    bottom: 25px;
+    font-size: 14px;
+    text-align: center;
+    line-height: 30px;
+    font-weight: bold;
+    color: white;
+}
+.sostenibility::after{
+    content: "Sostenibilità";
+    background-color: green;
+    width: auto;
+    height: 30px;
+    padding: 4px;
+    position: absolute;
+    display: inline-block;
+    left: 60px;
+    bottom: 25px;
+    font-size: 14px;
+    text-align: center;
+    line-height: 30px;
+    font-weight: bold;
+    color: white;
+}
 
-.overlay{
+/* Overlay */
+.overlay {
     display: inline-block;
     width: 100%;
     height: 100%;
@@ -43,10 +89,12 @@ figure{
     background-color: lavender;
     display: none;
 }
+
 .placeholder:hover .overlay{
     display: block;
 }
 
+/* Like */
 .like {
     width: 40px;
     height: 40px;
